# surf-parse

./: Cargo.toml  LICENSE  README.md
assets/: surfdoc.css  surfdoc.typ
docs/: architecture.surf
spec/: blocks.toml
src/: blocks.rs  builder.rs  extract.rs  icons.rs  lib.rs  manifest.rs  parse.rs  render_html.rs  render_md.rs  render_native.rs  render_pdf.rs  render_term.rs  render_typst.rs  serve.rs  template.rs  types.rs  validate.rs
tests/: integration.rs  properties.proptest-regressions  properties.rs  spec_compliance.rs
tests/fixtures/: app-spec.surf  basic.surf  fragment-site.surf  gallery-form.surf  literate.surf  manifest.surf  marketplace-spec.surf  plan-app.surf
