[package]
name = "surf-parse"
version = "0.5.1"
edition = "2024"
license = "MIT"
authors = ["CloudSurf Software LLC <hello@cloudsurf.com>"]
description = "Parser for the SurfDoc format — typed document format with block directives, Markdown-compatible"
repository = "https://github.com/cloudsurf-software/surf-parse"
homepage = "https://surfcontext.org"
keywords = ["surfdoc", "markdown", "parser", "document", "accessibility"]
categories = ["parser-implementations", "text-processing", "web-programming"]
readme = "README.md"

[features]
default = ["terminal"]
terminal = ["colored"]
pdf = ["chromiumoxide", "tokio", "futures"]
axum = ["dep:axum"]

[dependencies]
chromiumoxide = { version = "0.8", optional = true, default-features = false, features = ["tokio-runtime"] }
colored = { version = "3", optional = true }
futures = { version = "0.3", optional = true }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", optional = true, features = ["rt-multi-thread"] }
axum = { version = "0.8", optional = true, default-features = false, features = ["http1"] }

[dev-dependencies]
pretty_assertions = "1"
proptest = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
